@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-08-04"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080804
-#define RUBY_PATCHLEVEL 66
+#define RUBY_PATCHLEVEL 67
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
